--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10",
+    "axios": "^1.1.3",
     "next": "latest",
+    "next-sitemap": "^3.1.30",
+    "openai": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -15,6 +21,8 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
