--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^0.1.3",
     "axios": "^1.1.3",
     "next": "latest",
     "next-sitemap": "^3.1.30",
