--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-sitemap": "^3.1.30",
     "openai": "^3.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-feather": "^2.0.10"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
